<resources>
    <string name="app_name">ZapatillasAPP</string>

    <string name="title_btn_home_iniciarSesion">Iniciar Sesión</string>
    <string name="title_btn_home_sinRegistrar">Sin Registrar</string>

    <string name="login_name">Inicio de Sesión</string>
    <string name="title_txt_login_name">Email</string>
    <string name="title_txt_login_password">Contraseña</string>
    <string name="title_btn_login_log">Iniciar Sesión</string>
    <string name="title_btn_login_register">Registrar</string>
...
    <string name="title_btn_register_registrarse">Registrarse</string>
    <string name="title_tw_register">¿Ya tienes una cuenta? Inciar Sesión</string>

    <string name="title_btn_welcome_menu">Menu</string>

    <string name="menu_principal">Menú Principal</string>
    <string name="title_btn_menu_tiendas">Tiendas</string>
    <string name="title_btn_menu_favoritos">Favoritos</string>

    <string name="item_content">Item Content</string>


    <string name="Nombre_Tienda">NombreTienda</string>
...
